--- a/.env
+++ b/.env
@@ -38,6 +38,7 @@ APP_SECRET=3ca584a3ad5267e2c094097b68f1792a
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
+MAILER_URL="gmail://@localhost"
 MAILER_URL="gmail://eventum20@gmail.com:eventum5683@@localhost"
 ###< symfony/swiftmailer-bundle ###
 
